[gd_scene load_steps=3 format=3 uid="uid://cosckn42gn5ey"]

[ext_resource type="Script" uid="uid://d38xbug7mu5g" path="res://scripts/bubble_dot.gd" id="1_o2usn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ywgiu"]
radius = 32.0

[node name="BubbleDot" type="Area2D"]
collision_layer = 0
collision_mask = 6
script = ExtResource("1_o2usn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ywgiu")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
